--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <div class="icon-and-name">
 
             <div class="icon">
-              <svg width="32" height="32" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg width="30" height="30" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M33.9167 18.5C33.9167 9.99 27.01 3.08333 18.5 3.08333C9.99 3.08333 3.08334 9.99 3.08334 18.5C3.08334 25.9617 8.38667 32.1746 15.4167 33.6083V23.125H12.3333V18.5H15.4167V14.6458C15.4167 11.6704 17.8371 9.24999 20.8125 9.24999H24.6667V13.875H21.5833C20.7354 13.875 20.0417 14.5687 20.0417 15.4167V18.5H24.6667V23.125H20.0417V33.8396C27.8271 33.0687 33.9167 26.5012 33.9167 18.5Z" fill="black"/>
                 </svg>                
             </div>
@@ -173,7 +173,7 @@
           <div class="icon-and-name">
 
             <div class="icon">
-              <svg width="35" height="35" viewBox="0 0 46 38" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <svg width="30" height="30" viewBox="0 0 46 38" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <rect width="46" height="38" fill="url(#pattern0_90_11)"/>
                 <defs>
                 <pattern id="pattern0_90_11" patternContentUnits="objectBoundingBox" width="1" height="1">
@@ -190,7 +190,7 @@
           <div class="icon-and-name">
 
             <div class="icon">
-              <svg width="35" height="35" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <svg width="30" height="30" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <rect width="38" height="38" fill="url(#pattern0_90_12)"/>
                 <defs>
                 <pattern id="pattern0_90_12" patternContentUnits="objectBoundingBox" width="1" height="1">
@@ -207,7 +207,7 @@
           <div class="icon-and-name">
 
             <div class="icon">
-              <svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <svg width="30" height="30" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <rect width="37" height="37" fill="url(#pattern0_90_13)"/>
                 <defs>
                 <pattern id="pattern0_90_13" patternContentUnits="objectBoundingBox" width="1" height="1">
@@ -229,14 +229,9 @@
     <div class="tolero">Tolero</div>
   </div>
 
-    <!-- <div class="picture-box">
-      <div class="circle">
-        <svg width="554" height="572" viewBox="0 0 554 572" fill="none" xmlns="http://www.w3.org/2000/svg" class="circleDraw">
-          <ellipse cx="277" cy="286" rx="277" ry="286" fill="#92817A"/>
-          </svg>
+      <div class="picture-box">
+        <img src="image/joemarpic-Photoroom.png" alt="">
       </div>
-      <div class="joemarpic"><img src="image/joemarpic-Photoroom.png" alt="" class="joemar-picture"></div>
-    </div> -->
 
   </div>
 </div>
