--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="responsive.css">
   <!-- <link rel="stylesheet" href="responsive.css"> -->
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -72,7 +73,7 @@
           <div class="individual-skill">
             <div class="prog-lang">HTML</div>
             <div class="rate">
-              <svg width="237" height="6" viewBox="0 0 237 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="skill-rate" width="237" height="6" viewBox="0 0 237 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 3H118.5H237" stroke="white" stroke-width="5"/>
                 <path d="M0 3H72H144" stroke="#92817A" stroke-width="5"/>
                 </svg>
@@ -82,7 +83,7 @@
           <div class="individual-skill">
             <div class="prog-lang">CSS</div>
             <div class="rate">
-              <svg width="237" height="6" viewBox="0 0 237 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="skill-rate" width="237" height="6" viewBox="0 0 237 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 3H118.5H237" stroke="white" stroke-width="5"/>
                 <path d="M0 3H59H118" stroke="#92817A" stroke-width="5"/>
                 </svg>                
@@ -92,7 +93,7 @@
           <div class="individual-skill">
             <div class="prog-lang">JS</div>
             <div class="rate">
-              <svg width="237" height="6" viewBox="0 0 237 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="skill-rate" width="237" height="6" viewBox="0 0 237 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 3H118.5H237" stroke="white" stroke-width="5"/>
                 <path d="M0 3H47.5H95" stroke="#92817A" stroke-width="5"/>
                 </svg>                                          
@@ -102,7 +103,7 @@
           <div class="individual-skill">
             <div class="prog-lang">PHP</div>
             <div class="rate">
-              <svg width="237" height="6" viewBox="0 0 237 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="skill-rate" width="237" height="6" viewBox="0 0 237 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 3H118.5H237" stroke="white" stroke-width="5"/>
                 <path d="M0 3H39H78" stroke="#92817A" stroke-width="5"/>
                 </svg>                
@@ -112,7 +113,7 @@
           <div class="individual-skill">
             <div class="prog-lang">MySQL</div>
             <div class="rate">
-              <svg width="237" height="6" viewBox="0 0 237 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="skill-rate" width="237" height="6" viewBox="0 0 237 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 3H118.5H237" stroke="white" stroke-width="5"/>
                 <path d="M0 3H28H56" stroke="#92817A" stroke-width="5"/>
                 </svg>                               
@@ -132,23 +133,25 @@
       <div class="major-title">Major Subjects per year level</div>
 
       <div class="year-level-subject">
-
-        <div class="yearlvl">
-          <div><strong>First Year&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</strong></div>
-          <div>Programming 1</div>
-          <div><img src="image/cpp-removebg-preview.png" alt="" class="csslogo"></div>
+        <div class="yrbox1">
+          <div class="yrlevel"><strong>First Year: </strong></div>
+          <div class="language">Programming 1</div>
+          <div class="language-pic"><img src="image/cpp-removebg-preview.png" alt="">
+          </div>
         </div>
 
-        <div class="yearlvl">
-          <div><strong>Second Year&nbsp;:</strong></div>
-          <div>Web Development</div>
-          <div><img src="image/js.png " alt="" class="csslogo"></div>
+        <div class="yrbox1">
+          <div class="yrlevel"><strong>Second Year: </strong></div>
+          <div class="language">Web Development</div>
+          <div class="language-pic"><img src="image/js.png" alt="">
+          </div>
         </div>
 
-        <div class="yearlvl">
-          <div><strong>Third Year&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</strong></div>
-          <div>OOP</div>
-          <div><img src="image/OIP-removebg-preview.png" alt="" class="csslogo"></div>
+        <div class="yrbox1">
+          <div class="yrlevel"><strong>Third Year:</strong> </div>
+          <div class="language">OOP</div>
+          <div class="language-pic"><img src="image/OIP-removebg-preview.png" alt="">
+          </div>
         </div>
 
       </div>
