--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div class="container">
     <div class="left-section">
 
-      <div class="joemar">Joemar</div>
+      <div class="joemar">Joemar <span class="Tolero">Tolero</span></div>
       <div class="webdev">Web Developer</div> 
       <div class="description">"Hi, I'm Joemar, a BSIT 3A student at Cordova Public College with a growing interest in web development. I'm eager to learn and expand my skills, and I'm excited to contribute to projects that challenge me and help me grow as a developer."
       </div>
@@ -81,7 +81,7 @@
           </div>
 
           <div class="individual-skill">
-            <div class="prog-lang">CSS</div>
+            <div class="prog-lang css">CSS</div>
             <div class="rate">
               <svg class="skill-rate" width="237" height="6" viewBox="0 0 237 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 3H118.5H237" stroke="white" stroke-width="5"/>
@@ -91,7 +91,7 @@
           </div>
 
           <div class="individual-skill">
-            <div class="prog-lang">JS</div>
+            <div class="prog-lang js">JS</div>
             <div class="rate">
               <svg class="skill-rate" width="237" height="6" viewBox="0 0 237 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 3H118.5H237" stroke="white" stroke-width="5"/>
@@ -101,7 +101,7 @@
           </div>
 
           <div class="individual-skill">
-            <div class="prog-lang">PHP</div>
+            <div class="prog-lang php">PHP</div>
             <div class="rate">
               <svg class="skill-rate" width="237" height="6" viewBox="0 0 237 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 3H118.5H237" stroke="white" stroke-width="5"/>
@@ -111,7 +111,7 @@
           </div>
 
           <div class="individual-skill">
-            <div class="prog-lang">MySQL</div>
+            <div class="prog-lang mysql">MySQL</div>
             <div class="rate">
               <svg class="skill-rate" width="237" height="6" viewBox="0 0 237 6" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 3H118.5H237" stroke="white" stroke-width="5"/>
@@ -165,7 +165,7 @@
           <div class="icon-and-name">
 
             <div class="icon">
-              <svg width="30" height="30" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg width="30" height="30" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg" class="icons">
                 <path d="M33.9167 18.5C33.9167 9.99 27.01 3.08333 18.5 3.08333C9.99 3.08333 3.08334 9.99 3.08334 18.5C3.08334 25.9617 8.38667 32.1746 15.4167 33.6083V23.125H12.3333V18.5H15.4167V14.6458C15.4167 11.6704 17.8371 9.24999 20.8125 9.24999H24.6667V13.875H21.5833C20.7354 13.875 20.0417 14.5687 20.0417 15.4167V18.5H24.6667V23.125H20.0417V33.8396C27.8271 33.0687 33.9167 26.5012 33.9167 18.5Z" fill="black"/>
                 </svg>                
             </div>
