--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Holtwood+One+SC&family=Red+Rose:wght@300..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
-  <title>Joemar Web Design</title>
+  <title>JTolero BSIT 3A</title>
 </head>
 <body>
   <div class="all">
