--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Holtwood+One+SC&family=Red+Rose:wght@300..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
-  <title>JTolero BSIT 3A</title>
+  <title>Joemar Web Design</title>
 </head>
 <body>
   <div class="all">
@@ -58,8 +58,9 @@
     </header>
   <div class="container">
     <div class="left-section">
-
+     
       <div class="joemar">Joemar <span class="Tolero">Tolero</span></div>
+
       <div class="webdev">Web Developer</div> 
       <div class="description">"Hi, I'm Joemar, a BSIT 3A student at Cordova Public College with a growing interest in web development. I'm eager to learn and expand my skills, and I'm excited to contribute to projects that challenge me and help me grow as a developer."
       </div>
@@ -128,7 +129,7 @@
 
   <div class="right-section">
 
-    <div class="major-box">
+    <div class="major-box"> 
 
       <div class="major-title">Major Subjects per year level</div>
 
@@ -234,6 +235,8 @@
 
       <div class="picture-box">
         <img src="image/joemarpic-Photoroom.png" alt="">
+        <div class="circle"></div>
+        <div class="tolero3">Tolero</div>
       </div>
 
   </div>
